バグ修正とJava21での記載に改める。